@@ -15,8 +15,7 @@ option(WITH_INCHI   "build inchi lib" ON)
 option(BUILD_SHARED "enable static build support" ON)
 if(BUILD_SHARED)
   set(BUILD_TYPE SHARED)
-  add_definitions(-Wno-import)
-  #add_definitions(-DUSING_DYNAMIC_LIBS)
+  add_definitions(-DUSING_DYNAMIC_LIBS)
 else(BUILD_SHARED)
   set(BUILD_TYPE STATIC)
 endif(BUILD_SHARED)
